Use a builder thread factory